# forkledger

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: architecture.md  memory-model.md
examples/: demo.py  sample_forks.json
src/forkledger/: __init__.py  cli.py  counterfactual.py  engine.py  models.py  policy.py  retrieval.py  storage.py
tests/: test_engine.py
